--- a/Mission9_nb348/Views/_ViewImports.cshtml
+++ b/Mission9_nb348/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Mission9_nb348
 @using Mission9_nb348.Models
 @using Mission9_nb348.Models.ViewModels
+@using Mission9_nb348.Infrastructure 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Mission9_nb348
