--- a/Mission9_nb348/Views/Shared/BookSummary.cshtml
+++ b/Mission9_nb348/Views/Shared/BookSummary.cshtml
@@ -10,7 +10,7 @@
     <div class="bg-faded p-1">
         <h4>
             @Model.Title
-            <span class="badge badge-pill badge-primary" style="float:right">
+            <span class="badge badge-pill badge-primary bg-secondary text-success" style="float:right">
                 <small>@Model.Price.ToString("c")</small>
             </span>
         </h4>
@@ -31,7 +31,7 @@
         <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
 
         <span class="card-text">
-            <button type="submit" class="btn btn-success btn-sm float-end">Add to Cart</button>
+            <button type="submit" class="btn btn-success btn-sm float-end bg-warning text-white">Add to Cart</button>
         </span>
     </form>
 </div>
