--- a/Mission9_nb348/Pages/_Layout.cshtml
+++ b/Mission9_nb348/Pages/_Layout.cshtml
@@ -4,11 +4,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
     <div class="bg-dark text-white p-2">
-        Book Store
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col navbar-brand">
+                    Book Store
+                </div>
+                <div class="col-6 text-right">
+                    <vc:cart-summary></vc:cart-summary>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="m-1 p-1">
         @RenderBody()
