--- a/Mission9_nb348/Views/Shared/_Layout.cshtml
+++ b/Mission9_nb348/Views/Shared/_Layout.cshtml
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mission9_nb348</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
 <body>            
     <div class="bg-dark text-white p-2">
-        <span class="navbar-brand m-lg-2">Book Store</span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col navbar-brand">
+                    Book Store
+                </div>
+                <div class="col-6 text-right"><!--the cart view component-->
+                    <vc:cart-summary></vc:cart-summary>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="row m-1 p-1">
-
         <div id="types" class="col-3">
             <vc:types></vc:types>
         </div>
